--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,8 @@
 {
   "recommendations": [
     "astro-build.astro-vscode",
-    "biomejs.biome"
+    "biomejs.biome",
+    "editorconfig.editorconfig"
   ],
   "unwantedRecommendations": []
 }
