--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,8 @@
   "recommendations": [
     "astro-build.astro-vscode",
     "biomejs.biome",
-    "editorconfig.editorconfig"
+    "editorconfig.editorconfig",
+    "unifiedjs.vscode-mdx"
   ],
   "unwantedRecommendations": []
 }
