--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,4 +10,7 @@
   "[typescript]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
+  "[css]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
 }
