Add post detail markup

--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,7 @@
     "useEditorconfig": true
   },
   "organizeImports": {
-    "enabled": true
+    "enabled": false
   },
   "linter": {
     "enabled": true,
