--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.3",
+    "@astrojs/mdx": "^4.2.3",
     "@resvg/resvg-js": "^2.6.2",
-    "astro": "^5.1.10",
+    "astro": "^5.6.1",
     "satori": "^0.12.1",
     "satori-html": "^0.3.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "husky": "^9.1.7",
-    "sass": "^1.83.0"
+    "sharp": "^0.34.1"
   }
 }
