--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "husky": "^9.1.7",
+    "sass": "^1.87.0",
     "sharp": "^0.34.1"
   }
 }
